# cookiecutter-pypackage

./: README.md  cookiecutter.json  pyproject.toml
cookiecutter_pypackage/: __init__.py
tests/: test_cookiecutter_pypackage.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: bug_report.md
{{cookiecutter.project_slug}}/.github/workflows/: check_code.yml  deploy.yml
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
