[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.project_version}}"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[tool.pylint.messages_control]
max-line-length = 88
disable = [
    "missing-docstring"
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
bandit = "^1.7.0"
mypy = "^0.910"
pylint = "^2.9.3"
pre-commit = "^2.13.0"
black = "^21.7b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
